z-index fixed

--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ header img {
   justify-content: center;
   align-items: center;
   background-color: #fff;
+  z-index: 100;
 }
 .menu ul {
   position: relative;
